# chocopy-llvm

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
doc/PA1/: README.md
doc/PA2/: visitor.md
doc/PA3/: README.md  bonus.md
doc/PA4/: README.md
doc/common/: lightir.md  logging.md  stdlib.md
docs/: README.md  footer.md  index.html  toc.md
docs/PA1/: README.md  reading.md
docs/PA2/: README.md
docs/PA3/: README.md  bonus.md  reading.md  vectorization.md
docs/PA4/: README.md
docs/assets/css/: main.css
docs/assets/js/: sidebar.js
docs/common/: README.md  build.md  cmake.md  lightir.md  logging.md  structure.md  toolchain.md
docs/zh-cn/: README.md  toc.md
docs/zh-cn/PA1/: README.md
docs/zh-cn/PA2/: README.md
docs/zh-cn/PA3/: README.md  bonus.md  vectorization.md
docs/zh-cn/PA4/: README.md
docs/zh-cn/common/: build.md  lightir.md  stdlib.md  toolchain.md
include/cgen/: InstGen.hpp  RiscVBackEnd.hpp  chocopy_cgen.hpp
include/ir-optimizer/: BasicBlock.hpp  Class.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  IRBuilder.hpp  IRprinter.hpp  Module.hpp  Type.hpp  User.hpp  Value.hpp  chocopy_lightir.hpp  chocopy_optimization.hpp
include/parser/: chocopy_ast.hpp  chocopy_logging.hpp  chocopy_parse.hpp
include/semantic/: ClassDefType.hpp  FunctionDefType.hpp  SymbolTable.hpp  SymbolType.hpp  ValueType.hpp  chocopy_semant.hpp
include/win_extra/: FlexLexer.h
src/cgen/: CMakeLists.txt  chocopy_cgen.cpp
src/cgen/stdlib/: $input.s  $input_linux.s  $len.s  CMakeLists.txt  abort.s  abort_linux.s  accend.s  accstart.s  alloc.s  alloc2.s  alloc2_linux.s  chocopy_stdlib.S  concat.s  concat_linux.s  conslist.s  conslist_linux.s  debug.c  debug.h  error.Div.s  error.None.s  error.OOB.s  heap.init_linux.s  initchars.s  len_12.s  len_13.s  makebool.s  makeint.s  makestr.s  myprintf.c  myscanf.c  noconv.s  nonlist.s  preprocess  print.s  print_10.s  print_11.s  print_11_linux.s  print_5.s  print_7.s  print_7_linux.s  (+8 more)
src/ir-optimizer/: BasicBlock.cpp  CMakeLists.txt  Class.cpp  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp  chocopy_lightir.cpp  chocopy_optimization.cpp
src/parser/: CMakeLists.txt  chocopy.l  chocopy.y  chocopy_ast.cpp  chocopy_logging.cpp  chocopy_parse.cpp
src/semantic/: CMakeLists.txt  chocopy_semant.cpp
tests/: README.md  duipai.py  grammar.g4  indent.py  requirements.txt  run.sh
tests/pa1/sample/: bad_assign_expr1.py  bad_assign_expr1.py.ast  bad_assign_expr1.py.ast.bak  bad_assign_expr2.py  bad_assign_expr2.py.ast  bad_assign_expr2.py.ast.bak  bad_func_def.py  bad_func_def.py.ast  bad_func_def.py.ast.bak  bad_indentation.py  bad_indentation.py.ast  bad_indentation.py.ast.bak  bad_stmt.py  bad_stmt.py.ast  bad_stmt.py.ast.bak  chained_mixed_assignments.py  chained_mixed_assignments.py.ast  chained_mixed_assignments.py.ast.bak  chained_var_assignments.py  chained_var_assignments.py.ast  chained_var_assignments.py.ast.bak  class_attr.py  class_attr.py.ast  class_attr.py.ast.bak  class_attr_get.py  class_attr_get.py.ast  class_attr_get.py.ast.bak  class_attr_set.py  class_attr_set.py.ast  class_attr_set.py.ast.bak  class_constructor.py  class_constructor.py.ast  class_constructor.py.ast.bak  class_method.py  class_method.py.ast  class_method.py.ast.bak  coverage.py  coverage.py.ast  coverage.py.ast.bak  def_func.py  (+56 more)
tests/pa2/sample/: ast_coverage.py  ast_coverage.py.out.typed  bad_class_attr.py  bad_class_attr.py.out.typed  bad_class_attr_type.py  bad_class_attr_type.py.out.typed  bad_class_init_return.py  bad_class_init_return.py.out.typed  bad_class_member_expr.py  bad_class_member_expr.py.out.typed  bad_class_method.py  bad_class_method.py.out.typed  bad_class_method_invoke.py  bad_class_method_invoke.py.out.typed  bad_class_method_override.py  bad_class_method_override.py.out.typed  bad_class_method_override_attr.py  bad_class_method_override_attr.py.out.typed  bad_class_super.py  bad_class_super.py.out.typed  bad_concat.py  bad_concat.py.out.typed  bad_duplicate_class.py  bad_duplicate_class.py.out.typed  bad_duplicate_class_member.py  bad_duplicate_class_member.py.out.typed  bad_duplicate_global.py  bad_duplicate_global.py.out.typed  bad_duplicate_local.py  bad_duplicate_local.py.out.typed  bad_expr_binary.py  bad_expr_binary.py.out.typed  bad_expr_unary.py  bad_expr_unary.py.out.typed  bad_func_def_call.py  bad_func_def_call.py.out.typed  bad_func_def_return.py  bad_func_def_return.py.out.typed  bad_list_assign.py  bad_list_assign.py.out.typed  (+68 more)
tests/pa3/: bonus.py
tests/pa3/pass/: activevar1.json  activevar1.py  activevar2.json  activevar2.py  activevar3.json  activevar3.py  activevar4.json  activevar4.py  common_subexpr.py  const_propagate1.ll  const_propagate1.py  const_propagate2.ll  const_propagate2.py  const_propagate2.py.typed.ll.result  const_propagate3.ll  const_propagate3.py  const_propagate3.py.typed.ll.result  constant_fold.py  loopfind.py  loopinv_hoist1.ll  loopinv_hoist1.py  loopinv_hoist2.ll  loopinv_hoist2.py  loopinv_hoist3.ll  loopinv_hoist3.py  loopinv_hoist4.ll  loopinv_hoist4.py  printstr.py  vectorize.py  vectorize1.py
tests/pa3/sample/: call  call.ll  call.py  call.py.typed.ll.result  call.s  call_with_args  call_with_args.ll  call_with_args.py.typed  call_with_args.s  error_div_zero  error_div_zero.ll  error_div_zero.py.typed  error_div_zero.s  error_invalid_print  error_invalid_print.ll  error_invalid_print.s  error_mod_zero  error_mod_zero.ll  error_mod_zero.py.typed  error_mod_zero.s  expr_if  expr_if.ll  expr_if.py.typed  expr_if.s  id_global  id_global.ll  id_global.py  id_global.s  id_local  id_local.ll  id_local.py  id_local.s  input  input.ll  input.py  input.py.typed.ll.result  input.s  len_invalid_1  len_invalid_1.ll  len_invalid_1.s  (+302 more)
tests/pa4/benchmarks/: exp.py  exp.py.ast.typed  gemm.py  gen_gemm.py  (+12 more)
tools/: CMakeLists.txt  cjson_formatter.cpp
web/: README.md  WebCompiler.py  index.html  reply.py  sb  venus.html  venus.js
web/css/: sakura.css  venus.css
web/js/: codemirror.js
(+127 files in other folders)
